--- a/Dark Days/Dark Days/InfoCell.xib
+++ b/Dark Days/Dark Days/InfoCell.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,46 +13,43 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" tableViewCell="hFT-V8-G45" id="wI4-qv-xSV">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
+                <frame key="frameInset" width="320" height="99"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8V-3x-kFQ">
-                        <rect key="frame" x="13" y="8" width="294" height="30"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <attributedString key="attributedText"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YmA-ly-clA" userLabel="Accessory Image">
-                        <rect key="frame" x="279" y="8" width="28" height="28"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="YmA-ly-clA" secondAttribute="height" multiplier="1:1" id="23O-rc-bI2"/>
                             <constraint firstAttribute="width" constant="28" id="AV7-vU-PaP"/>
                         </constraints>
                     </imageView>
-                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cF2-dM-VSW" userLabel="Info Image">
-                        <rect key="frame" x="13" y="8" width="56" height="56"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7yF-Qk-gP7">
                         <constraints>
-                            <constraint firstAttribute="width" constant="56" id="Otd-Zu-JYS"/>
-                            <constraint firstAttribute="width" secondItem="cF2-dM-VSW" secondAttribute="height" multiplier="1:1" id="pUa-iP-3vf"/>
+                            <constraint firstAttribute="width" constant="56" id="DT3-I3-XXI"/>
+                            <constraint firstAttribute="width" secondItem="7yF-Qk-gP7" secondAttribute="height" multiplier="1:1" id="WVU-JZ-Ixo"/>
                         </constraints>
-                    </button>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="cF2-dM-VSW" firstAttribute="top" secondItem="wI4-qv-xSV" secondAttribute="topMargin" id="1o4-wG-NaT"/>
+                    <constraint firstItem="7yF-Qk-gP7" firstAttribute="top" secondItem="wI4-qv-xSV" secondAttribute="topMargin" id="2oo-yr-ibU"/>
                     <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="g8V-3x-kFQ" secondAttribute="bottom" constant="5" id="6FS-JO-PM1"/>
-                    <constraint firstItem="cF2-dM-VSW" firstAttribute="leading" secondItem="wI4-qv-xSV" secondAttribute="leadingMargin" constant="5" id="Al4-Nw-6FU"/>
                     <constraint firstItem="g8V-3x-kFQ" firstAttribute="leading" secondItem="wI4-qv-xSV" secondAttribute="leadingMargin" constant="5" id="HKe-9h-JcS"/>
-                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="cF2-dM-VSW" secondAttribute="bottom" constant="5" id="O7U-MH-Qyo"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="7yF-Qk-gP7" secondAttribute="bottom" constant="5" id="IDd-qT-gQm"/>
                     <constraint firstAttribute="trailingMargin" secondItem="g8V-3x-kFQ" secondAttribute="trailing" constant="5" id="Pim-D3-X2N"/>
                     <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="YmA-ly-clA" secondAttribute="bottom" constant="5" id="ScP-Fx-8tW"/>
+                    <constraint firstItem="7yF-Qk-gP7" firstAttribute="leading" secondItem="wI4-qv-xSV" secondAttribute="leadingMargin" constant="5" id="aK9-eO-Rjb"/>
+                    <constraint firstItem="7yF-Qk-gP7" firstAttribute="top" secondItem="g8V-3x-kFQ" secondAttribute="top" id="br1-WO-wbI"/>
                     <constraint firstItem="YmA-ly-clA" firstAttribute="top" secondItem="wI4-qv-xSV" secondAttribute="topMargin" id="eJF-nr-0a4"/>
                     <constraint firstAttribute="trailingMargin" secondItem="YmA-ly-clA" secondAttribute="trailing" constant="5" id="rk9-fn-dS9"/>
-                    <constraint firstItem="g8V-3x-kFQ" firstAttribute="top" secondItem="cF2-dM-VSW" secondAttribute="top" id="sNT-bI-k7Z"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="accessoryImageView" destination="YmA-ly-clA" id="t7X-Uz-5HN"/>
-                <outlet property="infoImageButton" destination="cF2-dM-VSW" id="EgM-tf-Uf6"/>
+                <outlet property="infoImageView" destination="7yF-Qk-gP7" id="fqR-9i-m7n"/>
                 <outlet property="infoTextView" destination="g8V-3x-kFQ" id="Y1a-ZQ-fLe"/>
             </connections>
             <point key="canvasLocation" x="584" y="263"/>
