--- a/Dark Days/Dark Days/HeroViewController.storyboard
+++ b/Dark Days/Dark Days/HeroViewController.storyboard
@@ -145,6 +145,12 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WcO-G0-THR" userLabel="Item Set List Button">
+                                <state key="normal" image="ItemSetListIcon"/>
+                                <connections>
+                                    <action selector="itemSetButtonTapped:" destination="GVh-lf-OHh" eventType="touchUpInside" id="H89-XM-8Y3"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mtJ-Xr-kK0" userLabel="Effects View Button">
                                 <state key="normal" image="EffectsListIcon"/>
                                 <connections>
@@ -165,10 +171,12 @@
                             <constraint firstAttribute="trailingMargin" secondItem="ZjN-eG-abz" secondAttribute="trailing" id="7n5-KW-1Wh"/>
                             <constraint firstItem="H5F-ib-KGt" firstAttribute="trailing" secondItem="n0R-I4-t9L" secondAttribute="leading" id="94O-f0-e4s"/>
                             <constraint firstItem="L7B-62-nce" firstAttribute="top" secondItem="H5F-ib-KGt" secondAttribute="bottom" constant="5" id="9iI-bs-hE4"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WcO-G0-THR" secondAttribute="trailing" id="9kG-Tb-ejd"/>
                             <constraint firstItem="J0T-dk-RFJ" firstAttribute="width" secondItem="BdS-UO-7gL" secondAttribute="width" id="CFR-D3-GJE"/>
                             <constraint firstItem="J0T-dk-RFJ" firstAttribute="top" secondItem="L7B-62-nce" secondAttribute="bottom" constant="5" id="D9w-mR-e4r"/>
                             <constraint firstItem="H5F-ib-KGt" firstAttribute="leading" secondItem="lf9-Bd-Kyf" secondAttribute="trailing" constant="-20" id="F89-ta-SPK"/>
                             <constraint firstItem="3ao-dt-idE" firstAttribute="width" secondItem="3ao-dt-idE" secondAttribute="height" multiplier="1:1" id="K1s-up-HCP"/>
+                            <constraint firstItem="WcO-G0-THR" firstAttribute="centerY" secondItem="mtJ-Xr-kK0" secondAttribute="centerY" id="LHp-Ec-zZa"/>
                             <constraint firstItem="BdS-UO-7gL" firstAttribute="centerX" secondItem="dmw-nJ-ihR" secondAttribute="centerX" id="Ltg-cg-eHd"/>
                             <constraint firstItem="ZjN-eG-abz" firstAttribute="leading" secondItem="lDs-B1-mLe" secondAttribute="trailing" constant="10" id="O3m-Vq-h4L"/>
                             <constraint firstItem="J0T-dk-RFJ" firstAttribute="top" secondItem="mtJ-Xr-kK0" secondAttribute="bottom" constant="15" id="O9G-jk-T6u"/>
@@ -213,6 +221,7 @@
                         <outlet property="godLabel" destination="L7B-62-nce" id="mkE-yi-hIB"/>
                         <outlet property="goldLabel" destination="IIW-ZV-Wic" id="ucv-0V-3Wv"/>
                         <outlet property="helmetButton" destination="lDs-B1-mLe" id="ywF-Jv-1Dz"/>
+                        <outlet property="itemSetListButton" destination="WcO-G0-THR" id="XM3-JA-CdF"/>
                         <outlet property="leftHandButton" destination="LMS-Zp-1oA" id="a3l-Dp-xRc"/>
                         <outlet property="rightHandButton" destination="58g-mR-vui" id="Q4S-cD-MOL"/>
                         <outletCollection property="equipmentButtons" destination="lDs-B1-mLe" collectionClass="NSMutableArray" id="zqi-Po-yd4"/>
@@ -313,7 +322,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xgb-fs-wDw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="576" y="819"/>
+            <point key="canvasLocation" x="577" y="842"/>
         </scene>
     </scenes>
     <resources>
@@ -325,6 +334,7 @@
         <image name="EffectsListIcon" width="36" height="36"/>
         <image name="HeartIcon" width="100" height="100"/>
         <image name="Helmet" width="40" height="40"/>
+        <image name="ItemSetListIcon" width="133" height="372"/>
         <image name="LeftHand" width="40" height="40"/>
         <image name="Menu" width="40" height="26"/>
         <image name="RightHand" width="40" height="40"/>
