Implements status effect view, fixes bug with non-updating effects VC

--- a/Dark Days/Dark Days/StatusesCollectionViewController.storyboard
+++ b/Dark Days/Dark Days/StatusesCollectionViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dU5-6r-IRD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2659" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dU5-6r-IRD">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -33,18 +33,18 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Wb2-Vy-RU6">
-                                            <rect key="frame" x="-163" y="-309" width="375" height="667"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DHt-xK-Zag" userLabel="Check Box" customClass="BEMCheckBox">
-                                                    <rect key="frame" x="0.0" y="9.5" width="15" height="15"/>
+                                                <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DHt-xK-Zag" userLabel="Check Box" customClass="BEMCheckBox">
+                                                    <rect key="frame" x="0.0" y="7" width="20" height="20"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="DHt-xK-Zag" secondAttribute="height" multiplier="1:1" id="3P2-Lq-zNX"/>
-                                                        <constraint firstAttribute="width" constant="15" id="g8B-WP-072"/>
+                                                        <constraint firstAttribute="width" constant="20" id="g8B-WP-072"/>
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="100" placeholderIntrinsicHeight="27.5" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPb-Zt-J1K">
-                                                    <rect key="frame" x="23" y="3.5" width="61" height="27.5"/>
+                                                    <rect key="frame" x="28" y="3.5" width="56" height="27.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
