--- a/Dark Days/Dark Days/MonthViewController.storyboard
+++ b/Dark Days/Dark Days/MonthViewController.storyboard
@@ -15,8 +15,8 @@
         <scene sceneID="4Sa-7W-wN9">
             <objects>
                 <collectionViewController id="Bq1-Qr-W4O" customClass="MonthViewController" customModule="Dark_Days" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="9OW-nT-Iwf">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="9OW-nT-Iwf">
+                        <rect key="frame" x="0.0" y="0.0" width="384" height="512"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NCB-7Q-LD8">
@@ -64,11 +64,11 @@
                             </collectionViewCell>
                         </cells>
                         <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MonthHeaderReuseIdentifier" id="Hws-DO-6CP" customClass="MonthHeaderView" customModule="Dark_Days" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                            <rect key="frame" x="0.0" y="0.0" width="384" height="50"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s3t-A6-zHh">
-                                    <rect key="frame" x="8" y="8" width="359" height="34"/>
+                                    <rect key="frame" x="8" y="8" width="368" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -89,6 +89,8 @@
                             <outlet property="delegate" destination="Bq1-Qr-W4O" id="6jH-3F-vhA"/>
                         </connections>
                     </collectionView>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="384" height="512"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gny-gK-ky3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
